Enable dependecy into test makefile, delete unsed test, progress dhcp_serverTest

--- a/makefile/Makefile
+++ b/makefile/Makefile
@@ -39,6 +39,7 @@ clean: .folderDel
 
 test:   all 
 	git submodule update --init
+	rm -rf $(BIN_DIR)/unittest ../test/bin/unittest
 	$(MAKE) -C  ../test/makefile all 
 	
 
