--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: cpp
-
 compiler:
   - gcc
+before_install:
+  - sudo pip install cpp-coveralls
 
 script: cd makefile && make test && ../bin/unittest
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
 
