--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ compiler:
 before_install:
   - sudo pip install cpp-coveralls
 
-script: cd makefile && make test && ../bin/unittest && coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+script: cd makefile && make test && ../bin/unittest && cd ../test/obj && coveralls --exclude lib --exclude tests --gcov-options '\-lp'
 
 
