--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "test/googletest"]
-	path = test/googletest
+	path = test/gTest-1.7.0
 	url = https://git.chromium.org/git/external/googletest.git
