--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ compiler:
 before_install:
   - sudo pip install cpp-coveralls
 
-script: cd makefile && make test && ../bin/unittest && cd ../test/obj && coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+script: cmake -Dtest=1 && make && ./bin/runUnitTests 
+#&& coveralls --exclude lib --exclude tests --gcov-options '\-lp'
 
 
