--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,13 @@ SET(CMAKE_VERBOSE_MAKEFILE OFF)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
 
 INCLUDE_DIRECTORIES (inc)
- 
+SET(LIB_SRC 
+		${PROJECT_SOURCE_DIR}/src/dhcp_server.c 
+		${PROJECT_SOURCE_DIR}/src/dhcp_log.c 
+		${PROJECT_SOURCE_DIR}/src/ip_allocator.c 
+		${PROJECT_SOURCE_DIR}/src/dhcp_server.c 
+		${PROJECT_SOURCE_DIR}/src/ip_allocator.c 
+		${PROJECT_SOURCE_DIR}/src/dhcp_packet.c)
 SET(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 FIND_PACKAGE(Threads REQUIRED)
 IF(CMAKE_USE_PTHREADS_INIT)
@@ -30,23 +36,40 @@ ENDIF()
 ################################
 # Libraries & Executables
 ################################
-ADD_LIBRARY(dhcpServerApp  
-		src/dhcp_server.c 
-		src/dhcp_log.c 
-		src/ip_allocator.c 
-		src/dhcp_server.c 
-		src/ip_allocator.c 
-		src/dhcp_packet.c)
+ADD_LIBRARY(dhcpServerApp ${LIB_SRC}) 
 
 ADD_EXECUTABLE (dhcpServerApp.bin src/main.c)
 target_link_libraries(dhcpServerApp.bin dhcpServerApp ${CMAKE_THREAD_LIBS_INIT} )
 
+################################
+#Add Coverage
+################################
+# Options. Turn on with 'cmake -Dmyvarname=ON'.
+OPTION(test "Build all tests." OFF) # Makes boolean 'test' available.
+option(COVERALLS "Turn on coveralls support" OFF)
+option(COVERALLS_UPLOAD "Upload the generated coveralls json" ON)
+
+
+MESSAGE(INFO  ${PROJECT_SOURCE_DIR}/coveralls-cmake/cmake)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
+                ${PROJECT_SOURCE_DIR}/coveralls-cmake/cmake)
+if (COVERALLS)
+        include(Coveralls)
+        coveralls_turn_on_coverage()
+endif()
+
+if (COVERALLS)
+        coveralls_setup(
+        "${LIB_SRC}" 
+        ${COVERALLS_UPLOAD}                 
+        "${PROJECT_SOURCE_DIR}/coveralls-cmake/cmake")
+endif()
 
 ################################
 # Testing
 ################################
 if (test)
-  
+ 
   # This adds another subdirectory, which has 'project(gtest)'.
   add_subdirectory(test/gTest-1.7.0)
 
