rawSocket - rawSocket enable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ SET(LIB_SRC
 SET(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 FIND_PACKAGE(Threads REQUIRED)
 IF(CMAKE_USE_PTHREADS_INIT)
-    SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-pthread")
+    SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-g -pthread")
 ENDIF()
 
 #####################################
