replace new gtest library

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "coveralls-cmake"]
 	path = coveralls-cmake
 	url = https://github.com/JoakimSoderberg/coveralls-cmake.git
+[submodule "test/gTest"]
+	path = test/gTest
+	url = git@github.com:google/googletest.git
