--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "test/gTest"]
 	path = test/gTest
 	url = git@github.com:google/googletest.git
+[submodule "libsqlite3"]
+	path = libsqlite3
+	url = git@github.com:LuaDist/libsqlite3.git
